<resources>
    <string name="app_name">Who Wants to Be a Millionaire_50015516</string>

    <string name="q1">Question 1</string>
    <string name="q2">Question 2</string>
    <string name="q3">Question 3</string>
    <string name="q4">Question 4</string>
    <string name="q5">Question 5</string>
    <string name="q6">Question 6</string>
    <string name="q7">Question 7</string>
    <string name="q8">Question 8</string>
    <string name="q9">Question 9</string>
    <string name="q10">Question 10</string>

    <string name="money1">You earned: $0</string>
    <string name="money2">You earned: $5,000</string>
    <string name="money3">You earned: $7,000</string>
    <string name="money4">You earned: $10,000</string>
    <string name="money5">You earned: $20,000</string>
    <string name="money6">You earned: $30,000</string>
    <string name="money7">You earned: $50,000</string>
    <string name="money8">You earned: $100,000</string>
    <string name="money9">You earned: $250,000</string>
    <string name="money10">You earned: $500,000</string>
    <string name="money11">You earned: $1,000,000</string>

    <string name="confirm">Confirm</string>
    <string name="win">Congratulations, You WIN!</string>
    <string name="lose">Sorry, You Lose!</string>
    <string name="restart">Restart Game</string>
</resources>